<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundcolour"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/MyProfileButton"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/button_background"
        android:text="@string/my_profile" />

    <Button
        android:id="@+id/BloodQuestionnaireButton"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/button_background"
        android:text="@string/donate_blood" />

    <Button
        android:id="@+id/FindClinicButton"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/button_background"
        android:text="@string/find_clinic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/BloodLevelButton"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/button_blood_level" />

        <Button
            android:id="@+id/GiveBloodButton"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/giveblood" />
    </LinearLayout>

</LinearLayout>