<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundcolour"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/bloodtypeheader"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="My Blood Type"
        android:textSize="20sp" 
        android:paddingLeft="0sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:paddingBottom="5sp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Select your blood type:"
            android:textSize="16sp" />

        <com.hotmail.keanser.irishblooddonationapp.myprofile.NDSpinner
            android:id="@+id/spinnerbloodtype"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/blood_types"
            android:prompt="@string/blood_type_select"
            android:textSize="16sp" />
    </LinearLayout>
    
    <LinearLayout      
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvLastRefreshed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:text="Last refreshed:"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnRefresh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="Refresh"
            android:textSize="16sp" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:paddingBottom="5sp" >

        <LinearLayout
            android:id="@+id/linlaHeaderProgress"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone" >
   
            <TextView
            android:id="@+id/tvBloodLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Retrieving blood level..."
            android:textSize="16sp" />     
            
            <ProgressBar
                android:id="@+id/pbHeaderProgress"
                style="@android:style/Widget.ProgressBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </ProgressBar>
        </LinearLayout>       
        
        <TextView
            android:id="@+id/tvCurrentBloodLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:textSize="16sp" />
    </LinearLayout>
    
    <LinearLayout      
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvNotification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.65"
            android:text="Set notification for blood level:"
            android:textSize="16sp" />

        <ToggleButton
            android:id="@+id/toggleButton1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:text="ToggleButton" />

    </LinearLayout>
    
    <TextView
        android:id="@+id/tvNotificationDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notification_note"
        android:textSize="16sp" />
       
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:paddingBottom="5sp" >

        <TextView
            android:id="@+id/donationinfoheader"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="My Donations"
            android:textSize="20sp" 
            android:paddingLeft="0sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="Last donation date:"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnChangeDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:text="Select Date"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvLastDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:textSize="16sp" 
            android:paddingBottom="5sp" />

        <TextView
            android:id="@+id/tvNextDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:textSize="16sp" 
            android:paddingBottom="5sp" />
        
        <TextView
            android:id="@+id/tvNextDateWarning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:textSize="16sp" 
            android:paddingBottom="5sp" />
        
        <LinearLayout
            android:id="@+id/llAddReminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:visibility="gone" 
            android:paddingBottom="5sp" >

            <TextView
                android:id="@+id/tvAddReminder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Set donation reminder:"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnAddReminder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Open Calender"
                android:textSize="16sp" />
        </LinearLayout>
        
    </LinearLayout>

</LinearLayout>